# rrproxy

./: .gitignore  Cargo.toml  README.md  demo.bat  demo.sh  demo_firewall.bat  demo_firewall.sh  local_proxy.md
docs/: CERTIFICATE_GENERATION.md  DYNAMIC_CERTIFICATES.md  IMPLEMENTATION_SUMMARY.md
scripts/: README.md  generate_certs.bat  generate_certs.ps1  generate_certs.sh  test_firewall_proxy.bat  test_firewall_proxy.sh
src/: cert_cache.rs  cert_gen.rs  common.rs  lib.rs  local_proxy.rs  logging.rs  main.rs  remote_proxy.rs
src/proxy/: mod.rs
src/proxy/local/: chunking.rs  config.rs  dynamic_tls.rs  handler.rs  https.rs  mod.rs
src/proxy/remote/: chunking.rs  config.rs  handler.rs  mod.rs  tunnel.rs
src/utils/: stream.rs
tests/: integration_tests.rs  test_certificate_generation.rs  test_certificate_generation_integration.rs  test_firewall_proxy.rs  test_proxy_integration.rs  test_tls_acceptor.rs
